--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@theme {
+  --font-family-sans: Pretendard, sans-serif;
+}
+
+body {
+  font-family: Pretendard, sans-serif;
+}
